--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,13 +6,15 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: aqua;
+    color: black;
   }
   
   /* Header/logo Title */
   .header {
-    padding: 80px;
+    padding: 100px;
     text-align: center;
-    background: #1abc9c;
+    background: #d0e20f;
     color: white;
   }
   
@@ -24,14 +26,14 @@
   /* Style the top navigation bar */
   .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #7c5454;
   }
   
   /* Style the navigation bar links */
   .navbar a {
     float: left;
     display: block;
-    color: white;
+    color: rgb(244, 18, 206);
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
